# biotech

./: .gitignore  pyproject.toml
results/: protein_length_table.csv  transcript_length_table.csv
src/: table_preprocess.py
