[tool.poetry]
name = "bd"
version = "0.1.0"
description = ""
authors = ["potato"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
ipykernel = "^6.29.3"
pandas = "^2.2.1"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
fastaparser = "^1.1.1"
biopython = "^1.83"
bcbio-gff = "^0.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
